Student dashboard fixed icons alignment and link color

--- a/TerraformMinds/wwwroot/css/style.css
+++ b/TerraformMinds/wwwroot/css/style.css
@@ -1,8 +1,8 @@
 ﻿/*---------------------------------------- General Styles-------------------------------------------*/
 /* ------------------------------------- Yellow Button------------------------------------------------*/
-* {
+/** {
     outline: 1px solid #FF0000;
-}
+}*/
 
     .btn {
         padding: 5px 15px;
@@ -48,16 +48,28 @@
         }
 
 /* ------------------------------------- Dashboard ------------------------------------------------*/
-
-
 .border-8 {
-    border-width: 8px !important;
-    border-color: #2F2F75 !important;
+    border-width: 0px !important;
 }
+
+
+@media screen and ( min-width: 768px) {
+    .border-8 {
+        border-width: 8px !important;
+        border-color: #2F2F75 !important;
+    }
+}
+
+
+/*----------------------------------------- Text with teal color ----------------------------------------------------*/
 
 .teal-text {
     color: #07769E !important;
 }
+
+    .teal-text:hover {
+        color: #E44485 !important;
+    }
 
 
     /*-----------------------------------------Nav Bar ----------------------------------------------------*/
